--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
     <h:body>
 
         <div id = "volet">
-            <div class = "row-fluid wrap" id="wrapFormSignIn">
+            <div class = "row-fluid" id="wrapFormSignIn">
 
                 <div class = "span4 offset4 content" id = "contentSignIn">
                     <h3 class = "titre">Sign In</h3><hr/>
@@ -38,7 +38,7 @@
             </div>
 
 
-            <div class = "row-fluid wrap" id="wrapFormSignUp">
+            <div class = "row-fluid" id="wrapFormSignUp">
                 <div class = "span4 offset4 content" id = "contentSignUp">
                     <h3 class = "titre" id = "titreSignUp">Sign Up</h3><hr/>
                     <h:messages class="alert alert-error"/>
