--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,7 +17,7 @@
 
                 <div class = "span4 offset4 content" id = "contentSignIn">
                     <h3 class = "titre">Sign In</h3><hr/>
-                    <h:messages class="alert alert-error" id = "erreurSaisie"/>
+                    <h:messages class="alert alert-error" id = "erreurSaisieSignIn"/>
 
                     <div class = "wrapForm">
                         <h:form prependId="false" class = "form" id="formSignIn">
@@ -39,7 +39,7 @@
             <div class = "row-fluid" id="wrapFormSignUp">
                 <div class = "span4 offset4 content" id = "contentSignUp">
                     <h3 class = "titre" id = "titreSignUp">Sign Up</h3><hr/>
-                    <h:messages class="alert alert-error"/>
+                    <h:messages class="alert alert-error" id = "erreurSaisieSignUp"/>
                     <div class = "wrapForm">
                         <h:form prependId="false" id="formSignUp">
                             <h:outputLabel class="outputLabel" for="inputNomSignUp">Nom</h:outputLabel>
