--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,7 +28,8 @@
                             <h:outputLabel class="checkbox">
                                 <h:selectBooleanCheckbox>Remember me</h:selectBooleanCheckbox>
                             </h:outputLabel>
-                            <h:commandButton type = "submit" class="btn btn-large btn-block  btn-success" value="Sign in" action = "#{index.signIn}" actionListener = "#{index.listener()}" id = "submitSignIn"/>
+                            <h:commandButton type = "submit" class="btn btn-large btn-block  btn-success" value="Sign in" action = "#{index.signIn}" actionListener="#{index.listenerSignIn()}" id = "submitSignIn"/>
+                            <h:inputHidden id = "isSubmittedSignIn" value="#{index.isSubmittedSignIn}"/>
                         </h:form>
                         <h:outputText class="btn btn-large btn-block  btn-primary" value="Sign up for free" id = "btnSignUp"/>
                     </div>
@@ -53,7 +54,8 @@
                             <h:outputLabel class="checkbox">
                                 <h:selectBooleanCheckbox>Remember me</h:selectBooleanCheckbox>
                             </h:outputLabel>
-                            <h:commandButton class="btn btn-large btn-block  btn-success" value="Sign up" action = "#{index.signUp}" id = "submitSignUp"/>
+                            <h:commandButton class="btn btn-large btn-block  btn-success" value="Sign up" action = "#{index.signUp}" actionListener="#{index.listenerSignUp()}" id = "submitSignUp"/>
+                            <h:inputHidden id = "isSubmittedSignUp" value="#{index.isSubmittedSignUp}"/>
                         </h:form>
                         <h:outputText class="btn btn-large btn-block  btn-primary" value="go to Sign in" id = "btnSignIn"/>
                     </div>
