--- a/src/main/webapp/signUpSuccess.xhtml
+++ b/src/main/webapp/signUpSuccess.xhtml
@@ -3,10 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>SignUp success</title>
     </h:head>
     <h:body>
-        Hello from bienvenue
+        <h2>Votre compte a bien été créé</h2>
+        <p>
+            recapitulatif.<br/>
+            nom : #{index.nom}<br/>
+            prenom : #{index.prenom}<br/>
+            email : #{index.email}<br/>
+            password : #{index.password}<br/>
+        </p>
     </h:body>
 </html>
 
