--- a/src/main/webapp/signInSuccess.xhtml
+++ b/src/main/webapp/signInSuccess.xhtml
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>SignIn success</title>
     </h:head>
     <h:body>
-        Hello from formulaire
+        <p>email : #{index.email}, password : #{index.password}</p>
     </h:body>
 </html>
 
