--- a/src/main/webapp/signInSuccess.xhtml
+++ b/src/main/webapp/signInSuccess.xhtml
@@ -1,12 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
-    <h:head>
-        <title>SignIn success</title>
-    </h:head>
-    <h:body>
-        <p>email : #{index.email}, password : #{index.password}</p>
-    </h:body>
-</html>
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition template="./template.xhtml"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://java.sun.com/jsf/facelets">
 
+    <ui:define name="title">
+        Sign In success
+    </ui:define>
+    <ui:define name="content">
+        <p>email : #{signIn.user.email}, password : #{signIn.user.password}</p>
+    </ui:define>
+
+</ui:composition>
