--- a/src/main/webapp/signInSuccess.xhtml
+++ b/src/main/webapp/signInSuccess.xhtml
@@ -8,7 +8,7 @@
         Sign In success
     </ui:define>
     <ui:define name="content">
-        <p>email : #{signIn.user.email}, password : #{signIn.user.password}</p>
+        <p>email : #{signIn.customer.email}, password : #{signIn.customer.password}</p>
     </ui:define>
 
 </ui:composition>
