--- a/src/main/webapp/signIn.xhtml
+++ b/src/main/webapp/signIn.xhtml
@@ -10,18 +10,18 @@
     </ui:define>
     <ui:define name="content">
         <div id = "contentSignIn" class = "contentSign">
-            <h3 class = "titre">Sign In</h3>
+            <h3 class = "titre center">Sign In</h3>
             <h:messages class="alert alert-error erreur" id = "erreurSaisieSignIn"/>
             <div class = "wrapForm">
                 <h:form prependId="false" class = "form" id="formSignIn" >
                     <h:outputLabel class="outputLabel" for="inputEmailSignIn">Email</h:outputLabel>
-                    <h:inputText id="inputEmailSignIn" value = "#{signIn.user.email}"></h:inputText>
+                    <h:inputText id="inputEmailSignIn" value = "#{signIn.customer.email}"></h:inputText>
                     <h:outputLabel class="outputLabel" for="inputPasswordSignIn">Password</h:outputLabel>
-                    <h:inputSecret id="inputPasswordSignIn" value="#{signIn.user.password}"></h:inputSecret>
+                    <h:inputSecret id="inputPasswordSignIn" value="#{signIn.customer.password}"></h:inputSecret>
                     <h:outputLabel class="checkbox">
                         <h:selectBooleanCheckbox>Remember me</h:selectBooleanCheckbox>
                     </h:outputLabel>
-                    <h:commandButton type = "submit" value="Sign in"
+                    <h:commandButton type="submit" value="Sign in"
                                      class="btn btn-large btn-block  btn-success"  id = "submitSignIn" 
                                      action = "#{signIn.submit}" actionListener="#{signIn.verification()}"/>
                 </h:form>
