--- a/src/main/webapp/signUp.xhtml
+++ b/src/main/webapp/signUp.xhtml
@@ -10,22 +10,25 @@
     </ui:define>
     <ui:define name="content">
         <div id = "contentSignUp" class = "contentSign">
-            <h3 class = "titre" id = "titreSignUp">Sign Up</h3>
-            <h:messages class="alert alert-error erreur" id = "erreurSaisieSignUp"/>
+            <h3 class = "titre center" id = "titreSignUp">Sign Up</h3>
+            <h:messages class="alert #{signUp.emailNotUsed == false?'alert-error':'alert-success center'}" 
+                        id = "messageSaisieSignUp"/>
             <div class = "wrapForm">
                 <h:form prependId="false" id="formSignUp">
                     <h:outputLabel class="outputLabel" for="inputNomSignUp">Nom</h:outputLabel>
-                    <h:inputText id="inputNomSignUp" value="#{signUp.user.nom}"></h:inputText>
+                    <h:inputText id="inputNomSignUp" value="#{signUp.customer.nom}"></h:inputText>
                     <h:outputLabel class="outputLabel" for="inputPrenomSignUp">Prenom</h:outputLabel>
-                    <h:inputSecret id="inputPrenomSignUp" value="#{signUp.user.prenom}"></h:inputSecret>
-                    <h:outputLabel class="outputLabel" for="inputPasswordSignUp">Password</h:outputLabel>
-                    <h:inputSecret id="inputPasswordSignUp" value="#{signUp.user.password}"></h:inputSecret>
+                    <h:inputText id="inputPrenomSignUp" value="#{signUp.customer.prenom}"></h:inputText>
                     <h:outputLabel class="outputLabel" for="inputEmailSignUp">Email</h:outputLabel>
-                    <h:inputText id="inputEmailSignUp" value = "#{signUp.user.email}"></h:inputText>
+                    <h:inputText id="inputEmailSignUp" value = "#{signUp.customer.email}"></h:inputText>
+                    <h:outputLabel class="outputLabel" for="inputPasswordSignUp">Password</h:outputLabel>
+                    <h:inputSecret id="inputPasswordSignUp" value="#{signUp.customer.password}"></h:inputSecret>
                     <h:outputLabel class="checkbox">
                         <h:selectBooleanCheckbox>Remember me</h:selectBooleanCheckbox>
                     </h:outputLabel>
-                    <h:commandButton class="btn btn-large btn-block  btn-success" id = "submitSignUp" value="Sign up" action = "#{signUp.submit}"/>
+                    <h:commandButton value="Sign up" 
+                                     class="btn btn-large btn-block  btn-success" id = "submitSignUp" 
+                                     action = "#{signUp.submit}" actionListener="#{signUp.verification()}"/>
                 </h:form>
                 <!--<h:outputText class="btn btn-large btn-block  btn-primary" value="go to Sign in" id = "btnSignIn"/>-->
                 <h:outputLink class="btn btn-large btn-block  btn-primary" value="signIn.xhtml" id = "btnSignIn">
