--- a/src/main/webapp/signInSuccess.xhtml
+++ b/src/main/webapp/signInSuccess.xhtml
@@ -2,13 +2,17 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition template="./template.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <ui:define name="title">
-        Sign In success
+        Sign in success
     </ui:define>
     <ui:define name="content">
         <p>email : #{signIn.customer.email}, password : #{signIn.customer.password}</p>
+        <h:form prependId = "false">
+            <h:commandLink value="se deconnecter" action="#{signIn.logOut()}" id = "btnLogout"/>
+        </h:form>
     </ui:define>
 
 </ui:composition>
