--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -6,8 +6,6 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="./resources/css/default.css" rel="stylesheet" type="text/css" />
-        <link href="./resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./resources/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="./resources/css/design.css" rel="stylesheet"/>
         <title><ui:insert name="title"></ui:insert></title>
@@ -24,7 +22,7 @@
         </div>
 
         <div id="bottom">
-            <p>Réalisé par adouche ali(adoucheali@yahoo.fr)</p>
+            <p>Réalisé par Adouche Ali (adoucheali@yahoo.fr)</p>
         </div>
 
     </h:body>
